--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </div>
         <div class="timer">00:00</div>
         <div class="btn">
-            <button>Start</button>
-            <button>Stop</button>
-            <button>Reset</button>
+            <button class="start">Start</button>
+            <button class="stop">Stop</button>
+            <button class="reset">Reset</button>
         </div>
     </div>
 </body>
