Complete vanilla stop watch

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
             <h1>STOP WATCH</h1>
             <h1>VANILLA JAVASCRIPT STOPWATCH</h1>
         </div>
-        <div class="timer">00:00</div>
+        <div class="timer">
+            <span id="sec">00</span>
+            :
+            <span id="ten">00</span>
+        </div>
         <div class="btn">
             <button class="start">Start</button>
             <button class="stop">Stop</button>
